Se agrego la comida favorita y se ubico los datos personales en el body, se agrego el titulo de datos personales

--- a/indes.html
+++ b/indes.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Pagina Web</title>
-    <h1><center>Pagina Web 1</center></h1>
-    <p>
+    <h1><center>Pagina Web 1</center></h1> 
+</head>
+<body>
+    <p id="parrafoDatos">
+        <h2>Datos Personales</h2>
         <li>Nombre: Alejandro Salas Jurado</li>
         <li>Edad: 18años</li>
     </p>
-</head>
-<body>
-    
+    <p>
+        <h2>Preferencias</h2>
+            <li>Comida favorita: Bandeja Paisa</li>   
+        
+    </p>
 </body>
 </html>
