se agrego la ubicacion

--- a/indes.html
+++ b/indes.html
@@ -16,7 +16,12 @@
     <p>
         <h2>Preferencias</h2>
             <li>Comida favorita: Bandeja Paisa</li>   
-        
+    </p>
+    <p>
+        <h2>Ubicacion</h2>
+            <li>Bogota D.C</li>
+            <li>Villa luz</li>
+            <li>Casa</li>
     </p>
 </body>
 </html>
