Se Cambio su ubicacion

--- a/indes.html
+++ b/indes.html
@@ -19,9 +19,9 @@
     </p>
     <p>
         <h2>Ubicacion</h2>
-            <li>Bogota D.C</li>
-            <li>Villa luz</li>
-            <li>Casa</li>
+            <li>Medellin</li>
+            <li>El Poblado</li>
+            <li>Apartamento</li>
     </p>
 </body>
 </html>
