Se agregaron datos especifitos(peso, edad, nivel de rockstar)

--- a/indes.html
+++ b/indes.html
@@ -23,5 +23,11 @@
             <li>El Poblado</li>
             <li>Apartamento</li>
     </p>
+    <p id="parrafoDatosEspecificos">
+        <h2>Datos Especificos</h2>
+        <li>Estatura: 170cm</li>
+        <li>Peso: 60kg</li>
+        <li>Nivel de Rockstar: Suficiente</li>
+    </p>
 </body>
 </html>
